# CPlatformer

./: CMakeLists.txt  Makefile  README.txt  Shooter  common.h  entity.c  level0.txt  main.c  map.c  scene.c  structs.c  structs.h  textures.c
.cache/clangd/index/: common.h.B1332532BFE7A300.idx  entity.c.8A500E751DCA9C4B.idx  main.c.D8880C24AD30CAF3.idx  scene.c.9C92562981447C13.idx  structs.c.1D561A3285212BEA.idx  structs.h.AB1B8F195C19CDC2.idx  textures.c.BBE982294B629CC8.idx
